--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,6 @@
 	"require": {
 		"php": ">=5.6.0",
 		"composer/installers": "1.*,>=1.0.1",
-		"mediawiki/parser-hooks": "~1.4",
 		"mediawiki/semantic-media-wiki": "~2.4"
 	},
 	"require-dev": {
@@ -51,7 +50,7 @@
 	},
 	"scripts": {
 		"setup": "php maintenance/setup.php",
-		"update": "php maintenance/updateSOLR.php -v"
-		
+		"update": "php maintenance/updateSOLR.php -v",
+		"post-install-cmd": "echo 'In order for EnhancedRetrieval to work a SOLR server needs to be insalled. Checkout https://www.semantic-mediawiki.org/wiki/Enhanced_Retrieval for details'"
 	}
 }
