--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,9 @@
 	"scripts": {
 		"setup": "php maintenance/setup.php",
 		"update": "php maintenance/updateSOLR.php -v",
-		"post-install-cmd": "echo 'Install: In order for EnhancedRetrieval to work a SOLR server needs to be insalled. Checkout https://www.semantic-mediawiki.org/wiki/Enhanced_Retrieval for details'",
-		"post-update-cmd": "echo 'Update: In order for EnhancedRetrieval to work a SOLR server needs to be insalled. Checkout https://www.semantic-mediawiki.org/wiki/Enhanced_Retrieval for details'"
+		"post-install-cmd": "php maintenance/composerMessage.php",
+		"post-update-cmd": "php maintenance/composerMessage.php",
+		"logg2": "php maintenance/composerMessage.php",
+		"logg1": "echo 'Install: In order for EnhancedRetrieval to work a SOLR server needs to be insalled. Checkout https://www.semantic-mediawiki.org/wiki/Enhanced_Retrieval for details'"
 	}
 }
