--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 	"require": {
 		"php": ">=5.6.0",
 		"composer/installers": "1.*,>=1.0.1",
-		"mediawiki/semantic-media-wiki": "~2.4"
+		"mediawiki/semantic-media-wiki": "~2.4",
+		"philo/laravel-blade": "3.1.*"
 	},
 	"require-dev": {
 		"mediawiki/semantic-media-wiki": "~2.4"
