--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 		"mediawiki/semantic-media-wiki": "~3.0",
 		"philo/laravel-blade": "3.1.*",
 		"mediawiki/bootstrap": "~1.1",
-		"diqa/util": "dev-master"
+		"diqa/util": "~2.0"
 	},
 	"require-dev": {
 		"mediawiki/semantic-media-wiki": "~3.0"
