--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
 		"composer/installers": "1.*,>=1.0.1",
 		"mediawiki/semantic-media-wiki": "~3.0",
 		"philo/laravel-blade": "3.1.*",
-		"mediawiki/bootstrap": "~1.1",
-		"diqa/util": "~2.0"
+		"mediawiki/bootstrap": "~1.1"
 	},
 	"require-dev": {
 		"mediawiki/semantic-media-wiki": "~3.0"
