--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
 		"php": ">=7.4.0",
 		"composer/installers": "1.*,>=1.0.1",
 		"mediawiki/semantic-media-wiki": "~3.0|~4.0",
-		"philo/laravel-blade": "3.1.*",
+		"eftec/bladeone": "4.17.1",
 		"mediawiki/bootstrap": "~4.5"
 	},
 	"replace": {
